// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GlobalNavAdapter> can render the Container as a child 1`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<GlobalNavAdapter> renders the global nav 1`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<GlobalNavAdapter> sideNavOpen prop can render the SideNav as a child 1`] = `
"<div class=\\"hig__global-nav\\">
    <div class=\\"hig__global-nav__sidenav\\">
  <div class=\\"hig__global-nav__sidenav__scroll\\">
    <h3 class=\\"hig__global-nav__sidenav__super-header\\">
      <a class=\\"hig__global-nav__sidenav__super-header-link\\"></a>
    </h3>
    <h4 class=\\"hig__global-nav__sidenav__header\\">
      <a class=\\"hig__global-nav__sidenav__header-link\\"></a>
    </h4>
    <div class=\\"hig__global-nav__sidenav__groups\\">
      <!--GROUP-->
    </div>
    <div class=\\"hig__global-nav__sidenav__links\\">
      <!--LINK-->
    </div>
    <div class=\\"hig__global-nav__sidenav__copyright\\">© 2017 Autodesk, Inc.</div>
  </div>
  <!--SEARCH-->
</div><!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<GlobalNavAdapter> sideNavOpen prop can showSideNav by default 1`] = `
"<div class=\\"hig__global-nav hig__global-nav--open\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<GlobalNavAdapter> sideNavOpen prop is equal to showSideNav 1`] = `
"<div class=\\"hig__global-nav hig__global-nav--open\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<GlobalNavAdapter> sideNavOpen prop is equal to showSideNav 2`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;
